# AgentWorkOS

./: .gitignore  README.md  agent-work-os-architecture.md  agent-work-os-prd-short.md  pyproject.toml
agentwork/: __main__.py
agentwork/api/: app.py  routes_runs.py
agentwork/cli/: main.py
agentwork/core/: adapters.py  bundles.py  checks.py  contracts.py  project.py  runner.py  scoring.py  validation.py
agentwork/domains/coffee_agent/: __init__.py  http_adapter.py
agentwork/domains/sre_ops/: __init__.py  checks.py  mock_adapter.py
agentwork/schemas/: agent_result.schema.json  contract.schema.json  scenario_bundle.schema.json
agentwork/storage/: repository.py  sqlite.py
bundles/: imported.yaml  sre-alerts.yaml
contracts/: sre-alerts.yaml
examples/coffee-agent/: agentwork.json
examples/coffee-agent/bundles/: coffee-agent.yaml
examples/coffee-agent/contracts/: coffee-agent.yaml
examples/sre/: agentwork.json
examples/sre/bundles/: sre-alerts.yaml
examples/sre/contracts/: sre-alerts.yaml
tests/: test_checks.py  test_scoring.py  test_smoke.py  test_validation.py
